test/negative/parse_iface_has_field.mut
# Negative: non-method inside interface body
interface IShape
    x: i64
end
